--- a/styles.css
+++ b/styles.css
@@ -102,13 +102,13 @@ nav a:hover::after {
     left: -10%;
     top: 40%;
     background: linear-gradient(45deg, rgba(116, 23, 208, 0.958), rgb(252, 168, 244));
-    animation: bigcircle 3s linear infinite;
+    animation: bigcircle 2s linear infinite;
 }
 
 @keyframes bigcircle {
     50% {
-        left: -12%;
-        top: 43%
+        left: -11%;
+        top: 41%
     }
 }
 
@@ -121,11 +121,14 @@ nav a:hover::after {
     left: 30%;
     top: 15%;
     background: linear-gradient(45deg, rgba(116, 23, 208, 0.958), rgb(252, 168, 244));
-    animation: lilcircle1 3s linear infinite;
+    animation: lilcircle1 2s linear infinite;
 }
 
 @keyframes lilcircle1 {
-    
+    50%{
+        left: 31%;
+        top: 16%;
+    }
 }
 
 .cols {
@@ -142,7 +145,14 @@ nav a:hover::after {
     bottom: -3%;
     right: -3%;
     background: linear-gradient(45deg, rgba(116, 23, 208, 0.958), rgb(252, 168, 244));
+    animation: lilcircle2 2s linear infinite;
+}
 
+@keyframes lilcircle2{
+    50%{
+        right: -2%;
+        bottom: -2%
+    }
 }
 
 .topline {
