--- a/styles.css
+++ b/styles.css
@@ -505,12 +505,6 @@ h1 {
 
 }
 
-#skills button {
-    position: absolute;
-    bottom: 25px;
-    box-shadow: 0px 15px 5px rgb(139, 139, 139);
-    animation: buttonn 2s linear infinite;
-}
 
 @keyframes buttonn {
     50% {
@@ -688,10 +682,10 @@ h1 {
     border-radius: 50%;
     right: -190px;
     bottom: 10px;
-    animation: mailcircle 2s linear infinite;
+    animation: mailcircle1 2s linear infinite;
 }
 
-@keyframes mailcircle {
+@keyframes mailcircle1 {
     50% {
         right: -184px;
         bottom: 18px;
@@ -896,11 +890,11 @@ h1 {
         margin-bottom: 20px;
     }
 
-    #skills table td{
+    #skills table td {
         border-bottom: 1px solid rgb(197, 197, 197);
     }
 
-    #skills .shadow{
+    #skills .shadow {
         display: none;
     }
 
@@ -909,7 +903,7 @@ h1 {
         bottom: 5%;
     }
 
-    #theadtext{
+    #theadtext {
         width: 120px;
     }
 
@@ -954,5 +948,303 @@ h1 {
     .mailcontainer form button {
         width: 100%;
         margin-top: 5px;
+    }
+}
+
+
+@media (min-width:570px) and (max-width: 950px) {
+
+    #header {
+        padding: 0px 20px;
+        /* align-items: flex-start; */
+
+    }
+
+    #header .links {
+        display: none;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        z-index: 75;
+        top: 0px;
+        right: -400px;
+        width: 300px;
+        border-radius: 0 0 0 15px;
+        background-color: #f3f5f8;
+        box-shadow: 0px 5px 70px rgb(222, 218, 218);
+        padding: 50px 0 40px 20px;
+        transition: 0.3s;
+    }
+
+    nav ul li {
+        top: 20px;
+    }
+
+    nav ul li a {
+        font-size: 25px;
+    }
+
+    nav ul.active {
+        right: 0px;
+    }
+
+    #header .links-mob {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 30px 0px 0px 20px;
+    }
+
+    #header .links-mob a {
+        padding-top: 20px;
+        padding-right: 30px;
+    }
+
+    #header .links-mob a:hover {
+        color: rgb(190, 31, 229);
+    }
+
+    #hamburger {
+        display: flex;
+        align-items: center;
+        color: #494949;
+    }
+
+    #hamburger i {
+        padding-right: 30px;
+    }
+
+    #close {
+        display: flex;
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        color: #494949;
+    }
+
+
+
+    #intro {
+        padding: 6%;
+        flex-direction: column;
+    }
+
+    #intro h1 {
+        width: 100%;
+    }
+
+    #intro::before {
+        display: none;
+    }
+
+    #intro::after {
+        top: 10%;
+        left: 65%;
+    }
+
+    @keyframes lilcircle1 {
+        50% {
+            left: 66%;
+            top: 11%;
+        }
+    }
+
+    .cols0::after {
+        z-index: -1;
+        position: absolute;
+        content: '';
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        right: 0%;
+        top: 37%;
+        background: linear-gradient(45deg, rgba(116, 23, 208, 0.958), rgb(252, 168, 244));
+        animation: bigcircle1 2s linear infinite;
+    }
+
+    @keyframes bigcircle1 {
+        50% {
+            right: 1%;
+            top: 38%
+        }
+    }
+
+
+    .cols {
+        width: 100%;
+    }
+
+    .cols p {
+        font-size: 1.3rem;
+    }
+
+    #splash {
+        width: 100%;
+        transform: translate(-50%, -50%) rotate(20deg);
+        top: 46%;
+        left: 50%;
+    }
+
+    @keyframes animate {
+        50% {
+            width: 115%;
+        }
+    }
+
+
+    .imgbox img {
+        animation: none;
+        width: 100%;
+    }
+
+
+    .cols1::after {
+        display: none;
+    }
+
+    #greeting::after {
+        content: '';
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        z-index: -1;
+        position: absolute;
+        right: 0%;
+        top: 45%;
+        background: linear-gradient(45deg, rgba(116, 23, 208, 0.958), rgb(252, 168, 244));
+        animation: circle1 2s linear infinite;
+    }
+
+    @keyframes circle1 {
+        50% {
+            right: 1%;
+            top: 47%;
+        }
+    }
+
+    #greeting {
+        padding: 5% 8%;
+    }
+
+    #greeting .texts p {
+        font-size: 20px;
+    }
+
+    #storyline {
+        flex-direction: column;
+    }
+
+    .maintext {
+        width: 100%;
+        padding: 0px 20px;
+    }
+
+    .maintext p {
+        font-size: 22px;
+    }
+
+    #storyline .educationandexperience {
+        width: 100%;
+    }
+
+    #hobbies {
+        position: relative;
+        padding: 10px 25px;
+    }
+
+    #hobbies .container img {
+        width: 50%;
+    }
+
+    #hobbies .container {
+        padding: 20px 25px;
+    }
+
+    #skills .keyskills {
+        width: 85%;
+    }
+
+    #skills table td {
+        font-size: 1.3rem;
+    }
+
+    #skills::after {
+        bottom: 10%;
+    }
+
+    #skills button {
+        position: relative;
+        top: 85px;
+    }
+
+    .emailform {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #sendemail {
+        align-items: center;
+    }
+
+    #sendemail .email {
+        width: 100%;
+    }
+
+    #sendemail .contactimage {
+        width: 95%;
+    }
+
+    #sendemail .contactimage img {
+        left: 18%;
+        animation: none;
+        transform: rotate(5deg);
+    }
+
+    #sendemail::after{
+        background: linear-gradient(45deg, rgb(252, 168, 244), rgba(116, 23, 208, 0.958));
+    }
+
+    
+    @keyframes mailcircle {
+        50% {
+            background: linear-gradient(45deg,  rgba(116, 23, 208, 0.958), rgb(252, 168, 244));
+        }
+    }
+
+    .contactdetails::after {
+        width: 100px;
+        height: 100px;
+        right: -170px;
+        bottom: 23px;
+    }
+
+    @keyframes mailcircle1 {
+        50% {
+            background: linear-gradient(45deg,  rgb(252, 168, 244), rgba(116, 23, 208, 0.958));
+
+        }
+    }
+
+    .contactdetails {
+        text-align: center;
+        position: absolute;
+        bottom: 0px;
+    }
+
+    #sendemail::before {
+        width: 180px;
+        height: 180px;
+        right: 0px;
+        top: 25%;
+    }
+
+    @keyframes behindcat {
+        50% {
+            background: linear-gradient(45deg, rgb(252, 168, 244), rgba(116, 23, 208, 0.958));
+        }
     }
 }
