--- a/styles.css
+++ b/styles.css
@@ -536,6 +536,11 @@ h1 {
     width: 45%;
 }
 
+#skills button{
+    position: absolute;
+    bottom: 40px;
+}
+
 #skills table {
     width: 100%;
     border-collapse: collapse;
@@ -886,7 +891,7 @@ h1 {
 
     #skills button {
         position: relative;
-        margin-top: 50px;
+        margin-top: 80px;
         margin-bottom: 20px;
     }
 
